--- a/index.html
+++ b/index.html
@@ -1,10 +1,60 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+
+    <title>Benjamin Manjolo</title>
+    <meta
+      name="description"
+      content="The official website of Benjamin Manjolo — visual storyteller, creative thinker, and designer."
+    />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph (for Facebook, LinkedIn, etc.) -->
+    <meta property="og:title" content="Benjamin Manjolo" />
+    <meta
+      property="og:description"
+      content="Visual storyteller and creative thinker. View my work and connect with me."
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://benjaminmanjolo-nine.vercel.app/"
+    />
+    <meta
+      property="og:image"
+      content="https://benjaminmanjolo-nine.vercel.app/"
+    />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Benjamin Manjolo" />
+    <meta
+      name="twitter:description"
+      content="programmer and designer. Visit my portfolio."
+    />
+    <meta
+      name="twitter:image"
+      content="https://benjaminmanjolo-nine.vercel.app/"
+    />
+
+    <!-- Structured Data (optional but great for Google) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Benjamin Manjolo",
+        "url": "https://benjaminmanjolo-nine.vercel.app/",
+        "sameAs": [
+          "https://twitter.com/BenjaminManjolo",
+          "https://www.linkedin.com/in/benjamin-manjolo-b86567238/"
+        ],
+        "jobTitle": "programmer",
+        "description": "The official website of Benjamin Manjolo. Explore my creative work and connect with me."
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
