--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
         "description": "The official website of Benjamin Manjolo. Explore my creative work and connect with me."
       }
     </script>
+    <meta
+      name="google-site-verification"
+      content="1DNYiH-LUSUUPORUZLpmKnKa7mybc3kn2r7jF2x-PGk"
+    />
   </head>
   <body>
     <div id="root"></div>
